add be and game url to  the landing page

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,6 +53,9 @@ services:
       context: ./message-app/landing
       dockerfile: Dockerfile
     container_name: lilo-stitch-landing
+    environment:
+      BACKEND_URL: ${BACKEND_URL}
+      GAME_URL: ${GAME_URL}
     ports:
       - "3000:80"
     networks:
